--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "graph-editor",
   "version": "0.1.0",
-  "private": true,
   "dependencies": {
     "@babel/core": "7.16.0",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
@@ -62,6 +61,7 @@
     "file-loader": "6.2.0",
     "fs-extra": "10.0.0",
     "html-webpack-plugin": "5.5.0",
+    "html2canvas": "^1.4.1",
     "identity-obj-proxy": "3.0.0",
     "jest": "29.3.1",
     "jest-resolve": "29.3.1",
