--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
     "@getify/eslint-plugin-proper-arrows": "11.0.3",
-    "@mv-d/toolbelt": "2",
+    "@mv-d/toolbelt": "^2.0.0",
     "@pmmmwh/react-refresh-webpack-plugin": "0.5.3",
     "@svgr/webpack": "5.5.0",
     "@testing-library/jest-dom": "5.16.5",
@@ -66,7 +66,7 @@
     "jest": "29.3.1",
     "jest-resolve": "29.3.1",
     "jest-watch-typeahead": "2.2.1",
-    "mermaid": "^9.3.0",
+    "mermaid": "10.0.0-rc.4",
     "mini-css-extract-plugin": "2.4.5",
     "monaco-editor": "^0.35.0",
     "monaco-mermaid": "^1.0.8",
