--- a/package.json
+++ b/package.json
@@ -2,109 +2,110 @@
   "name": "graph-editor",
   "version": "0.1.0",
   "dependencies": {
-    "@babel/core": "7.16.0",
+    "@babel/core": "7.21.4",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/plugin-proposal-private-methods": "^7.18.6",
-    "@babel/plugin-proposal-private-property-in-object": "^7.20.5",
-    "@babel/preset-env": "^7.20.2",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.0",
+    "@babel/preset-env": "^7.21.4",
     "@babel/preset-react": "^7.18.6",
-    "@babel/preset-typescript": "^7.18.6",
+    "@babel/preset-typescript": "^7.21.4",
     "@getify/eslint-plugin-proper-arrows": "11.0.3",
-    "@mv-d/toolbelt": "2",
-    "@pmmmwh/react-refresh-webpack-plugin": "0.5.3",
-    "@svgr/webpack": "5.5.0",
+    "@mv-d/toolbelt": "^2.1.1",
+    "@pmmmwh/react-refresh-webpack-plugin": "0.5.10",
+    "@svgr/webpack": "7.0.0",
     "@testing-library/jest-dom": "5.16.5",
-    "@testing-library/react": "13.4.0",
+    "@testing-library/react": "14.0.0",
     "@testing-library/user-event": "14.4.3",
-    "@types/jest": "29.2.4",
-    "@types/node": "18.11.9",
-    "@types/ramda": "^0.28.22",
-    "@types/react": "18.0.26",
-    "@types/react-dom": "18.0.10",
-    "@typescript-eslint/eslint-plugin": "5.47.1",
-    "@typescript-eslint/parser": "5.47.1",
-    "babel-jest": "27.4.2",
-    "babel-loader": "8.2.3",
+    "@types/jest": "29.5.0",
+    "@types/node": "18.15.11",
+    "@types/ramda": "^0.28.24",
+    "@types/react": "18.0.35",
+    "@types/react-dom": "18.0.11",
+    "@typescript-eslint/eslint-plugin": "5.58.0",
+    "@typescript-eslint/parser": "5.58.0",
+    "babel-jest": "29.5.0",
+    "babel-loader": "9.1.2",
     "babel-plugin-named-asset-import": "0.3.8",
     "babel-preset-react-app": "10.0.1",
     "bfj": "7.0.2",
-    "browserslist": "4.18.1",
+    "browserslist": "4.21.5",
     "buffer": "6.0.3",
-    "camelcase": "6.2.1",
+    "camelcase": "7.0.1",
     "case-sensitive-paths-webpack-plugin": "2.4.0",
     "clsx": "1.2.1",
-    "css-loader": "6.5.1",
-    "css-minimizer-webpack-plugin": "3.2.0",
+    "css-loader": "6.7.3",
+    "css-minimizer-webpack-plugin": "5.0.0",
     "depcheck": "1.4.3",
-    "dotenv": "10.0.0",
-    "dotenv-expand": "5.1.0",
-    "eslint": "8.30.0",
-    "eslint-config-prettier": "8.5.0",
+    "dotenv": "16.0.3",
+    "dotenv-expand": "10.0.0",
+    "eslint": "8.38.0",
+    "eslint-config-prettier": "8.8.0",
     "eslint-config-react-app": "7.0.1",
-    "eslint-import-resolver-typescript": "3.5.2",
+    "eslint-import-resolver-typescript": "3.5.5",
     "eslint-plugin-async-await": "0.0.0",
     "eslint-plugin-eslint-comments": "3.2.0",
     "eslint-plugin-html": "7.1.0",
-    "eslint-plugin-import": "2.26.0",
-    "eslint-plugin-jest": "27.1.7",
-    "eslint-plugin-jsdoc": "39.6.2",
+    "eslint-plugin-import": "2.27.5",
+    "eslint-plugin-jest": "27.2.1",
+    "eslint-plugin-jsdoc": "41.1.1",
     "eslint-plugin-json": "3.1.0",
     "eslint-plugin-markdown": "3.0.0",
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-promise": "6.1.1",
-    "eslint-plugin-react": "7.31.10",
+    "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
-    "eslint-plugin-regexp": "1.10.0",
-    "eslint-plugin-security": "1.5.0",
-    "eslint-plugin-testing-library": "5.9.1",
+    "eslint-plugin-regexp": "1.14.0",
+    "eslint-plugin-security": "1.7.1",
+    "eslint-plugin-testing-library": "5.10.2",
     "file-loader": "6.2.0",
-    "fs-extra": "10.0.0",
+    "fs-extra": "11.1.1",
     "html-webpack-plugin": "5.5.0",
     "html2canvas": "^1.4.1",
     "identity-obj-proxy": "3.0.0",
-    "jest": "29.3.1",
-    "jest-resolve": "29.3.1",
-    "jest-watch-typeahead": "2.2.1",
-    "mermaid": "^9.3.0",
-    "mini-css-extract-plugin": "2.4.5",
-    "monaco-editor": "^0.35.0",
+    "jest": "29.5.0",
+    "jest-resolve": "29.5.0",
+    "jest-watch-typeahead": "2.2.2",
+    "mermaid": "^10.1.0",
+    "mini-css-extract-plugin": "2.7.5",
+    "monaco-editor": "^0.37.1",
     "monaco-mermaid": "^1.0.8",
-    "postcss": "8.4.4",
+    "postcss": "8.4.21",
     "postcss-flexbugs-fixes": "5.0.2",
-    "postcss-loader": "6.2.1",
-    "postcss-nesting": "^11.1.0",
+    "postcss-loader": "7.2.4",
+    "postcss-nesting": "^11.2.2",
     "postcss-normalize": "10.0.1",
-    "postcss-preset-env": "7.0.1",
-    "prettier": "2.8.1",
+    "postcss-preset-env": "8.3.1",
+    "prettier": "2.8.7",
     "prompts": "2.4.2",
-    "ramda": "^0.28.0",
+    "ramda": "^0.29.0",
     "react": "18.2.0",
     "react-app-polyfill": "3.0.0",
     "react-dev-utils": "12.0.1",
     "react-dom": "18.2.0",
-    "react-icons": "4.7.1",
+    "react-icons": "4.8.0",
     "react-popper-tooltip": "^4.4.2",
-    "react-refresh": "0.11.0",
-    "recoil": "^0.7.6",
-    "resolve": "1.20.0",
-    "resolve-url-loader": "4.0.0",
-    "sass": "1.55.0",
-    "sass-loader": "12.3.0",
-    "semver": "7.3.5",
-    "source-map-loader": "3.0.0",
-    "style-loader": "3.3.1",
+    "react-refresh": "0.14.0",
+    "react-zoom-pan-pinch": "^3.0.7",
+    "recoil": "^0.7.7",
+    "resolve": "1.22.2",
+    "resolve-url-loader": "5.0.0",
+    "sass": "1.62.0",
+    "sass-loader": "13.2.2",
+    "semver": "7.4.0",
+    "source-map-loader": "4.0.1",
+    "style-loader": "3.3.2",
     "svg-pan-zoom": "^3.6.1",
-    "terser-webpack-plugin": "5.2.5",
-    "ts-jest": "29.0.3",
-    "typescript": "4.9.4",
+    "terser-webpack-plugin": "5.3.7",
+    "ts-jest": "29.1.0",
+    "typescript": "5.0.4",
     "use-context-selector": "1.4.1",
-    "web-vitals": "2.1.4",
-    "webpack": "5.64.4",
+    "web-vitals": "3.3.1",
+    "webpack": "5.78.0",
     "webpack-cli": "^5.0.1",
-    "webpack-dev-server": "4.6.0",
-    "webpack-manifest-plugin": "4.0.2",
-    "workbox-webpack-plugin": "6.4.1"
+    "webpack-dev-server": "4.13.2",
+    "webpack-manifest-plugin": "5.0.0",
+    "workbox-webpack-plugin": "6.5.4"
   },
   "scripts": {
     "start": "NODE_ENV=development node scripts/start.js",
