--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "graph-editor",
-	"version": "0.1.0",
+	"version": "1.0.0",
 	"dependencies": {
 		"@mv-d/toolbelt": "^4.0.0",
 		"@sniptt/monads": "^0.5.10",
@@ -56,11 +56,7 @@
 		"test:dependencies": "depcheck"
 	},
 	"browserslist": {
-		"production": [
-			">0.2%",
-			"not dead",
-			"not op_mini all"
-		],
+		"production": [">0.2%", "not dead", "not op_mini all"],
 		"development": [
 			"last 1 chrome version",
 			"last 1 firefox version",
