--- a/package.json
+++ b/package.json
@@ -1,66 +1,94 @@
 {
-	"name": "graph-editor",
-	"version": "1.0.0",
-	"dependencies": {
-		"@mv-d/toolbelt": "^4.0.0",
-		"@sniptt/monads": "^0.5.10",
-		"@types/lodash": "^4.14.195",
-		"@types/node": "20.4.2",
-		"@types/react": "^18.2.15",
-		"@types/react-dom": "^18.2.7",
-		"@vitejs/plugin-react-swc": "^3.3.2",
-		"@vitest/coverage-v8": "^0.33.0",
-		"autoprefixer": "^10.4.14",
-		"clsx": "2.0.0",
-		"depcheck": "1.4.3",
-		"html2canvas": "^1.4.1",
-		"lodash": "^4.17.21",
-		"mermaid": "^10.2.4",
-		"monaco-editor": "^0.40.0",
-		"monaco-mermaid": "^1.0.8",
-		"postcss-nesting": "^12.0.0",
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0",
-		"react-icons": "4.10.1",
-		"react-popper-tooltip": "^4.4.2",
-		"react-spinners": "^0.13.8",
-		"react-zoom-pan-pinch": "^3.1.0",
-		"recoil": "^0.7.7",
-		"rome": "^12.1.3",
-		"stylelint": "^15.10.1",
-		"stylelint-config-standard": "^34.0.0",
-		"stylelint-config-standard-scss": "^10.0.0",
-		"stylelint-order": "^6.0.3",
-		"svg-pan-zoom": "^3.6.1",
-		"tslib": "^2.6.0",
-		"typescript": "5.1.6",
-		"use-context-selector": "1.4.1",
-		"vite": "^4.4.4",
-		"vite-plugin-parse-html": "^2.1.0",
-		"vite-tsconfig-paths": "^4.2.0",
-		"vitest": "^0.33.0",
-		"web-vitals": "^3.4.0"
-	},
-	"scripts": {
-		"format": "rome format src --write",
-		"start": "vite",
-		"dev": "NODE_ENV=development vite",
-		"build": "NODE_ENV=production rm -rf dist && tsc && vite build",
-		"preview": "vite preview",
-		"test": "vitest run",
-		"test:watch": "vitest",
-		"test:coverage": "vitest run --coverage",
-		"install-logger": "cp node_modules/@mv-d/toolbelt/dist/logger.js public/logger.js",
-		"postinstall": "pnpm install-logger",
-		"lint": "rome ci src",
-		"test:dependencies": "depcheck"
-	},
-	"browserslist": {
-		"production": [">0.2%", "not dead", "not op_mini all"],
-		"development": [
-			"last 1 chrome version",
-			"last 1 firefox version",
-			"last 1 safari version"
-		]
-	}
+  "name": "graph-editor",
+  "version": "2.0.0",
+  "dependencies": {
+    "@getify/eslint-plugin-proper-arrows": "11.0.3",
+    "@mv-d/toolbelt": "^6.1.0",
+    "@sinm/monaco-plantuml": "^0.5.6",
+    "@sniptt/monads": "^0.5.10",
+    "@stylistic/eslint-plugin": "^1.7.0",
+    "@types/lodash": "^4.17.0",
+    "@types/node": "20.11.29",
+    "@types/react": "^18.2.67",
+    "@types/react-dom": "^18.2.22",
+    "@typescript-eslint/eslint-plugin": "7.2.0",
+    "@typescript-eslint/parser": "7.2.0",
+    "@vitejs/plugin-react-swc": "^3.6.0",
+    "@vitest/coverage-v8": "^1.4.0",
+    "autoprefixer": "^10.4.18",
+    "clsx": "2.1.0",
+    "depcheck": "1.4.7",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-async-await": "^0.0.0",
+    "eslint-plugin-eslint-comments": "^3.2.0",
+    "eslint-plugin-html": "^8.0.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jsdoc": "^48.2.1",
+    "eslint-plugin-json": "^3.1.0",
+    "eslint-plugin-markdown": "^4.0.1",
+    "eslint-plugin-node": "11.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-regexp": "^2.3.0",
+    "eslint-plugin-security": "2.1.1",
+    "html2canvas": "^1.4.1",
+    "lodash": "^4.17.21",
+    "mermaid": "^10.9.0",
+    "monaco-editor": "^0.47.0",
+    "monaco-mermaid": "^1.1.0",
+    "plantuml-encoder-decoder": "1.2.5-2",
+    "postcss-nesting": "^12.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "5.0.1",
+    "react-popper-tooltip": "^4.4.2",
+    "react-spinners": "^0.13.8",
+    "react-zoom-pan-pinch": "^3.4.3",
+    "recoil": "^0.7.7",
+    "stylelint": "16.1.0",
+    "stylelint-config-recommended": "14.0.0",
+    "stylelint-config-standard": "36.0.0",
+    "stylelint-order": "6.0.4",
+    "stylelint-selector-no-utility": "4.0.0",
+    "svg-pan-zoom": "^3.6.1",
+    "tslib": "^2.6.2",
+    "typescript": "5.4.2",
+    "use-context-selector": "1.4.4",
+    "vite": "^5.1.6",
+    "vite-plugin-parse-html": "^2.1.0",
+    "vite-tsconfig-paths": "^4.3.2",
+    "vitest": "^1.4.0",
+    "web-vitals": "^3.5.2"
+  },
+  "scripts": {
+    "format": "rome format src --write",
+    "start": "vite",
+    "dev": "NODE_ENV=development vite",
+    "build": "NODE_ENV=production rm -rf dist && tsc && vite build",
+    "preview": "vite preview",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage",
+    "install-logger": "cp node_modules/@mv-d/toolbelt/dist/logger.js public/logger.js",
+    "postinstall": "pnpm install-logger",
+    "lint": "rome ci src",
+    "test:dependencies": "depcheck"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "eslint-plugin-react": "^7.34.1"
+  }
 }
